--- a/Bhakta_BonusAssignment.ipynb
+++ b/Bhakta_BonusAssignment.ipynb
@@ -96,7 +96,7 @@
         "                print(word, 'is at row', coordinates[0]+1, 'and column', coordinates[1]+1, direction + \".\")\n",
         "\n",
         "printTrueWords(word_direction, tuple, wordlines)\n",
-        "print(\"\\nThe remaining words did not match the criteria.\")"
+        "print(\"\\nOther words did not match the criteria.\")"
       ]
     }
   ]
